; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_self_refresh_helper.c_drm_self_refresh_helper_cleanup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_self_refresh_helper.c_drm_self_refresh_helper_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_crtc = type { %struct.drm_self_refresh_data* }
%struct.drm_self_refresh_data = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @drm_self_refresh_helper_cleanup(%struct.drm_crtc* %0) #0 {
  %2 = alloca %struct.drm_crtc*, align 8
  %3 = alloca %struct.drm_self_refresh_data*, align 8
  store %struct.drm_crtc* %0, %struct.drm_crtc** %2, align 8
  %4 = load %struct.drm_crtc*, %struct.drm_crtc** %2, align 8
  %5 = getelementptr inbounds %struct.drm_crtc, %struct.drm_crtc* %4, i32 0, i32 0
  %6 = load %struct.drm_self_refresh_data*, %struct.drm_self_refresh_data** %5, align 8
  store %struct.drm_self_refresh_data* %6, %struct.drm_self_refresh_data** %3, align 8
  %7 = load %struct.drm_self_refresh_data*, %struct.drm_self_refresh_data** %3, align 8
  %8 = icmp ne %struct.drm_self_refresh_data* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %18

10:                                               ; preds = %1
  %11 = load %struct.drm_crtc*, %struct.drm_crtc** %2, align 8
  %12 = getelementptr inbounds %struct.drm_crtc, %struct.drm_crtc* %11, i32 0, i32 0
  store %struct.drm_self_refresh_data* null, %struct.drm_self_refresh_data** %12, align 8
  %13 = load %struct.drm_self_refresh_data*, %struct.drm_self_refresh_data** %3, align 8
  %14 = getelementptr inbounds %struct.drm_self_refresh_data, %struct.drm_self_refresh_data* %13, i32 0, i32 0
  %15 = call i32 @cancel_delayed_work_sync(i32* %14)
  %16 = load %struct.drm_self_refresh_data*, %struct.drm_self_refresh_data** %3, align 8
  %17 = call i32 @kfree(%struct.drm_self_refresh_data* %16)
  br label %18

18:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @cancel_delayed_work_sync(i32*) #1

declare dso_local i32 @kfree(%struct.drm_self_refresh_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
